<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:id="@+id/rl_ac_dialog_phone_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_ac_dialog_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/ac_inquire_phone"
            android:textColor="@color/ac_333333"
            android:textSize="@dimen/ac_inquire_verification_size" />

        <TextView
            android:id="@+id/tv_ac_dialog_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_ac_dialog_phone"
            android:text="1510030011"
            android:textColor="@color/ac_333333"
            android:textSize="@dimen/ac_inquire_verification_size" />
    </RelativeLayout>
<!--短信验证码-->
    <RelativeLayout
        android:id="@+id/rl_ac_inquire_verification_code_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_ac_inquire_pic_verification_code_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/et_ac_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:text="@string/ac_inquire_verification_code"
            android:textColor="@color/ac_00050A"
            android:textSize="@dimen/ac_inquire_verification_size" />

        <EditText
            android:id="@+id/et_ac_verification_code_text"
            android:layout_width="@dimen/ac_inquire_et_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/et_ac_verification_code"
            android:background="@drawable/ac_et_dialog_bg"
            android:digits="0123456789"
            android:hint="@string/ac_inquire_input_msg_code"
            android:inputType="number"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textColor="@color/ac_00050A"
            android:textColorHint="@color/ac_CACCCF"
            android:textSize="@dimen/ac_inquire_verification_size" />

        <TextView

            android:id="@+id/tv_ac_get_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_ac_verification_code_text"
            android:layout_alignTop="@+id/et_ac_verification_code_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/et_ac_verification_code_text"
            android:background="@drawable/ac_bg_verification_code_enable"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="6dp"
            android:text="获取验证码"
            android:textColor="@color/ac_FFFFFF"
            android:textSize="@dimen/ac_inquire_verification_size" />
    </RelativeLayout>
<!--图文验证码-->
    <RelativeLayout
        android:id="@+id/rl_ac_inquire_pic_verification_code_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_ac_dialog_phone_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_ac_verification_code_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:text="@string/ac_inquire_verification_code"
            android:textColor="@color/ac_00050A"
            android:textSize="@dimen/ac_inquire_verification_size" />

        <EditText
            android:id="@+id/et_ac_verification_code_pic"
            android:layout_width="@dimen/ac_inquire_et_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_ac_verification_code_pic"
            android:background="@drawable/ac_et_dialog_bg"
            android:hint="@string/ac_inquire_input_pic_code_msg"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textColor="@color/ac_00050A"
            android:textColorHint="@color/ac_CACCCF"
            android:textSize="@dimen/ac_inquire_verification_size" />

        <RelativeLayout
            android:id="@+id/rl_ac_pic_code_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_ac_verification_code_pic"
            android:layout_alignTop="@+id/et_ac_verification_code_pic"
            android:layout_toRightOf="@+id/et_ac_verification_code_pic"
            android:background="@drawable/ac_bg_verification_code_enable"
            android:padding="1dp">

            <TextView
                android:id="@+id/tv_ac_get_pic_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:maxLines="1"
                android:text="获取验证码"
                android:textColor="@color/ac_FFFFFF"
                android:textSize="@dimen/ac_inquire_verification_size" />

            <ImageView
                android:foregroundGravity="center"
                android:id="@+id/iv_ac_verification_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitXY" />
        </RelativeLayout>

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_ac_dialog_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:src="@drawable/ac_icon_close"
        android:visibility="gone" />
</RelativeLayout>